server/static/css/style.css
body {
    background-color: #503754;
    color: white;
    font-family: "Calibri";
    margin: 0;
}

a {
    color: bisque;
}

h2, h3, form, a {
    margin: 8px;
}

#top-bar {
    background-color: #362838;

    position: sticky;
    display: flex;

    width: 100vw;
    height: fit-content;
    border-radius: 0px 0px 5px 5px;
    
    justify-content: space-between;
    vertical-align: middle;

    margin: 0;
    top: 0;
    left: 0;
    right: 0;
}

#top-bar > h1, #top-bar > h3 {
    margin: 0;
    padding: 5px;
}

